<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Posicionamiento</string>
    <string name="action_settings">Settings</string>
    <string name="etique_pos_actual">Posición actual</string>
    <string name="acc_activar">Activar</string>
    <string name="acc_parar">Parar</string>
    <string name="texto_estado">Estado del proveedor</string>
    <string name="GPS_ON">GPS ON</string>
    <string name="Network_ON">RED ON</string>
    <string name="GPS_OFF">GPS OFF</string>
    <string name="Network_OFF">NETWORK OFF</string>
    <string name="Opciones_localizacion">OPCIONES LOCALIZACION</string>
    <string name="DATOS_ON">Internet disponible</string>
    <string name="DATOS_OFF">Internet apagado</string>

</resources>